[project]
name = "report-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "h5py>=3.15.1",
    "medpy>=0.5.2",
    "ml-collections>=1.1.0",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "simpleitk>=2.5.3",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
